2002-01-28  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/chunklst.cc,etc:  'Groups' work for 'u7chunks' now.

2002-01-28  Ryan Nunn  <triforce@merlin.net.au>
	* sigame.cc : Reworking SI endgame. Now has correct timing and speech.
	  Text message for when speech is disabled is yet to be included.
	* audio/Audio.cc : Needed to add unknown voc chunk type '5' for some
	  vocs in SI endgame. Just assuming it is silence for now.
	* flic/playfli.* : Added a 'put_buffer' method to copy the current
	  contents of a flics ImageBuffer to an ImageWindow

2002-01-28  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* tools/wuc.c, wud.c, rip.c: fixed bugs, made wuc compatible with wud

2002-01-28  Darke  <darkepaw@users.sourceforge.net>
	* mapedit/studio.h: std::;
	* usecode/ucxt/*: Added -ftt option, which outputs, something that
	looks suspiciously like a conf/ file containing all the string 'data'
	for the specifed functions.

2002-01-27  Darke  <darkepaw@users.sourceforge.net>
	* usecode/ucxt/head2data*: Creates data/u7bgintrinsics.data and
	data/u7siintrinsics.data from their respective *intrinsics.h files.

	* usecode/ucxt/*: Modifications to allow for the above.

	* usecode/ucxt/*: Fixed U7opens.

2002-01-27  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* tools/wuc.c, rip.c: minor bugfixes
	* tools/rip.c: use .uco extension for extracted objects

2002-01-26  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/:  'Groups' of shapes are starting to work, with a group
	opened by double-clicking its name, and shapes added to it by
	dragging them to its window.

2002-01-25  Darke  <darkepaw@users.sourceforge.net>
	* mapedit/, usecode/compiler/: Namespaces.

2002-01-24  Ryan Nunn  <triforce@merlin.net.au>
	* server/servewin32.cc : Accidently force WinNT/2K/XP to use the Win9x
	  comms.

2002-01-24  Ryan Nunn  <triforce@merlin.net.au>
	* msvcstuff/msvc_kludges.h : HAVE_SSTREAM
	* msvcstuff/exconfig/exconfig.cpp : Updated for new config constructors